--- a/brain_fm_assignment_1_clone.html
+++ b/brain_fm_assignment_1_clone.html
@@ -50,24 +50,29 @@
                 <div style="padding-left: 170px;">
                     <p style="font-size: larger;">Patented Technology</p>
                     <p>Brain.fm holds patents on key processes for creating
-                    functional music, including technology to elicit strong neural
-                    phase locking-allowing populations of neurons to engage in
-                    various kind of coordinated activity-and technology to
-                    create music that helps you do what you need to do. </p>
+                        functional music, including technology to elicit strong neural
+                        phase locking-allowing populations of neurons to engage in
+                        various kind of coordinated activity-and technology to
+                        remove distraction in sound. </p>
+                    <p> This makes our music unique, purpose-built to steer you into a desired mental state.
+                        in other words, we've found new ways to create music that helps you do what you need
+                        to do.
+                    </p>
                     <p style="font-size: large;"><u>Explore More of Our Science</u></p>
                     
                 </div>
                 <div style="padding-left: 150px;">
                     <p style="font-size: larger;">Tested on Brain and Behavior</p>
-                    <p>Scientists at Brain.fm work with collaborators at academic
-                    institutions to run experiments
-                    We look at the effects of our technology on the brain, using
-                    fMRI and EEG, and also run large-scale behavioral tests,
-                    measuring performance on simple games.
-                    Our experiments always include a control condition
-                    ('placebo') of the same underlying music without Brain.fm
-                    technology applied, so we can be sure our tech is what makes
-                    the difference. </p>
+                    <p> Scientists at Brain.fm work with collaborators at academic
+                        institutions to run experiments</p>
+
+                   <p>  We look at the effects of our technology on the brain, using
+                        fMRI and EEG, and also run large-scale behavioral tests,
+                        measuring performance on simple games.</p>
+                    <p> Our experiments always include a control condition
+                        ('placebo') of the same underlying music without Brain.fm
+                        technology applied, so we can be sure our tech is what makes
+                        the difference. </p>
                     
                 </div>
 
